--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ importFrom(checkmate,testIntegerish)
 importFrom(checkmate,testList)
 importFrom(checkmate,testNull)
 importFrom(checkmate,testNumeric)
+importFrom(checkmate,testSubset)
 importFrom(checkmate,testTRUE)
 importFrom(cli,symbol)
 importFrom(crayon,cyan)
