--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(gt_scale)
 export(load_csv)
 export(load_kml)
 export(locate)
+export(scaleParameters)
 export(setTheme)
 export(visualise)
 exportMethods(getCRS)
@@ -33,6 +34,7 @@ exportMethods(setTable)
 exportMethods(setWindow)
 importFrom(checkmate,assert)
 importFrom(checkmate,assertCharacter)
+importFrom(checkmate,assertChoice)
 importFrom(checkmate,assertClass)
 importFrom(checkmate,assertDataFrame)
 importFrom(checkmate,assertFile)
@@ -97,6 +99,7 @@ importFrom(methods,as)
 importFrom(methods,new)
 importFrom(raster,"extent<-")
 importFrom(raster,as.matrix)
+importFrom(raster,brick)
 importFrom(raster,crs)
 importFrom(raster,extent)
 importFrom(raster,ncol)
@@ -133,4 +136,5 @@ importFrom(stringr,str_replace)
 importFrom(stringr,str_split)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
+importFrom(utils,head)
 useDynLib(geometr)
