--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,8 +32,7 @@ Suggests: testthat,
     rmarkdown,
     magrittr,
     covr,
-    knitr,
-    rasterTools
+    knitr
 LinkingTo: Rcpp
 RoxygenNote: 6.1.1
 SystemRequirements: C++11
