replace brick with stack

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -99,7 +99,6 @@ importFrom(methods,as)
 importFrom(methods,new)
 importFrom(raster,"extent<-")
 importFrom(raster,as.matrix)
-importFrom(raster,brick)
 importFrom(raster,crs)
 importFrom(raster,extent)
 importFrom(raster,ncol)
@@ -108,6 +107,7 @@ importFrom(raster,nrow)
 importFrom(raster,projectRaster)
 importFrom(raster,raster)
 importFrom(raster,ratify)
+importFrom(raster,stack)
 importFrom(raster,values)
 importFrom(readr,read_csv)
 importFrom(rgdal,project)
