make use of rlang

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -111,6 +111,8 @@ importFrom(raster,stack)
 importFrom(raster,values)
 importFrom(readr,read_csv)
 importFrom(rgdal,project)
+importFrom(rlang,"!!")
+importFrom(rlang,exprs)
 importFrom(sf,"st_geometry<-")
 importFrom(sf,st_bbox)
 importFrom(sf,st_coordinates)
