--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ importFrom(readr,read_csv)
 importFrom(rgdal,project)
 importFrom(rlang,"!!")
 importFrom(rlang,exprs)
+importFrom(rlang,rep_along)
 importFrom(sf,"st_geometry<-")
 importFrom(sf,st_bbox)
 importFrom(sf,st_coordinates)
@@ -133,6 +134,7 @@ importFrom(stats,hclust)
 importFrom(stats,kmeans)
 importFrom(stats,quantile)
 importFrom(stats,runif)
+importFrom(stats,setNames)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_replace)
 importFrom(stringr,str_split)
