--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -55,6 +55,7 @@ reference:
       - '`gtGeoms`'
       - '`gtSP`'
       - '`gtSF`'
+      - '`gtRasters`'
 navbar:
   left:
     - text: "Getting Started"
