move parts of plotting to extra functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,8 @@ export(gt_scale)
 export(load_csv)
 export(load_kml)
 export(locate)
+export(makeColours)
+export(makeFormat)
 export(scaleParameters)
 export(setTheme)
 export(visualise)
