--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(checkmate,testClass)
 importFrom(checkmate,testDataFrame)
 importFrom(checkmate,testIntegerish)
 importFrom(checkmate,testList)
+importFrom(checkmate,testNames)
 importFrom(checkmate,testNull)
 importFrom(checkmate,testNumeric)
 importFrom(checkmate,testSubset)
@@ -103,6 +104,7 @@ importFrom(raster,"extent<-")
 importFrom(raster,as.matrix)
 importFrom(raster,crs)
 importFrom(raster,extent)
+importFrom(raster,getValues)
 importFrom(raster,ncol)
 importFrom(raster,nlayers)
 importFrom(raster,nrow)
@@ -110,7 +112,6 @@ importFrom(raster,projectRaster)
 importFrom(raster,raster)
 importFrom(raster,ratify)
 importFrom(raster,stack)
-importFrom(raster,values)
 importFrom(readr,read_csv)
 importFrom(rgdal,project)
 importFrom(rlang,"!!")
