new function gs_line

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export()
 export(gs_hexagon)
+export(gs_line)
 export(gs_point)
 export(gs_polygon)
 export(gs_random)
@@ -21,7 +22,6 @@ export(load_kml)
 export(locate)
 export(makeColours)
 export(makeFormat)
-export(scaleParameters)
 export(setTheme)
 export(visualise)
 exportMethods(getCRS)
@@ -46,7 +46,6 @@ importFrom(checkmate,assertLogical)
 importFrom(checkmate,assertNames)
 importFrom(checkmate,assertNumeric)
 importFrom(checkmate,assertSubset)
-importFrom(checkmate,assertTRUE)
 importFrom(checkmate,testCharacter)
 importFrom(checkmate,testClass)
 importFrom(checkmate,testDataFrame)
