--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,6 @@ export(gt_as_sp)
 export(gt_group)
 export(gt_rotate)
 export(gt_scale)
-export(load_csv)
-export(load_kml)
 export(locate)
 export(makeColours)
 export(makeFormat)
@@ -39,13 +37,13 @@ importFrom(checkmate,assertCharacter)
 importFrom(checkmate,assertChoice)
 importFrom(checkmate,assertClass)
 importFrom(checkmate,assertDataFrame)
-importFrom(checkmate,assertFile)
 importFrom(checkmate,assertIntegerish)
 importFrom(checkmate,assertList)
 importFrom(checkmate,assertLogical)
 importFrom(checkmate,assertNames)
 importFrom(checkmate,assertNumeric)
 importFrom(checkmate,assertSubset)
+importFrom(checkmate,assertTRUE)
 importFrom(checkmate,testCharacter)
 importFrom(checkmate,testClass)
 importFrom(checkmate,testDataFrame)
@@ -111,7 +109,6 @@ importFrom(raster,projectRaster)
 importFrom(raster,raster)
 importFrom(raster,ratify)
 importFrom(raster,stack)
-importFrom(readr,read_csv)
 importFrom(rgdal,project)
 importFrom(rlang,"!!")
 importFrom(rlang,exprs)
@@ -125,6 +122,9 @@ importFrom(sf,st_set_crs)
 importFrom(sf,st_transform)
 importFrom(sp,Polygon)
 importFrom(sp,Polygons)
+importFrom(sp,SpatialLinesDataFrame)
+importFrom(sp,SpatialMultiPointsDataFrame)
+importFrom(sp,SpatialPixelsDataFrame)
 importFrom(sp,SpatialPoints)
 importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,SpatialPolygons)
@@ -137,9 +137,6 @@ importFrom(stats,kmeans)
 importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,setNames)
-importFrom(stringr,str_extract)
-importFrom(stringr,str_replace)
-importFrom(stringr,str_split)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,head)
