change getCoords to getVertices

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,11 +23,11 @@ export(makeFormat)
 export(setTheme)
 export(visualise)
 exportMethods(getCRS)
-exportMethods(getCoords)
 exportMethods(getExtent)
 exportMethods(getHistory)
 exportMethods(getSubset)
 exportMethods(getTable)
+exportMethods(getVertices)
 exportMethods(getWindow)
 exportMethods(setCRS)
 exportMethods(setTable)
@@ -117,8 +117,10 @@ importFrom(sf,"st_geometry<-")
 importFrom(sf,st_bbox)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
+importFrom(sf,st_geometry)
 importFrom(sf,st_geometry_type)
 importFrom(sf,st_set_crs)
+importFrom(sf,st_sf)
 importFrom(sf,st_transform)
 importFrom(sp,Polygon)
 importFrom(sp,Polygons)
