modernize function, enable lines

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,8 +122,11 @@ importFrom(sf,st_geometry_type)
 importFrom(sf,st_set_crs)
 importFrom(sf,st_sf)
 importFrom(sf,st_transform)
+importFrom(sp,Line)
+importFrom(sp,Lines)
 importFrom(sp,Polygon)
 importFrom(sp,Polygons)
+importFrom(sp,SpatialLines)
 importFrom(sp,SpatialLinesDataFrame)
 importFrom(sp,SpatialMultiPointsDataFrame)
 importFrom(sp,SpatialPixelsDataFrame)
