manage all functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,18 +14,17 @@ export(gs_polygon)
 export(gs_random)
 export(gs_rectangle)
 export(gs_square)
-export(gs_tiles)
 export(gs_triangle)
 export(gs_voronoi)
-export(gt_as_geom)
-export(gt_as_grob)
-export(gt_as_raster)
-export(gt_as_sf)
-export(gt_as_sp)
+export(gt_edit)
+export(gt_grob)
+export(gt_locate)
+export(gt_raster)
 export(gt_rotate)
 export(gt_scale)
+export(gt_sf)
+export(gt_sp)
 export(gt_vGroup)
-export(locate)
 export(makeColours)
 export(makeFormat)
 export(setCRS)
@@ -90,6 +89,7 @@ importFrom(grid,gPath)
 importFrom(grid,gpar)
 importFrom(grid,grid.clip)
 importFrom(grid,grid.draw)
+importFrom(grid,grid.edit)
 importFrom(grid,grid.force)
 importFrom(grid,grid.get)
 importFrom(grid,grid.grep)
@@ -100,6 +100,7 @@ importFrom(grid,grid.newpage)
 importFrom(grid,grid.points)
 importFrom(grid,grid.raster)
 importFrom(grid,grid.rect)
+importFrom(grid,grid.remove)
 importFrom(grid,grid.text)
 importFrom(grid,pathGrob)
 importFrom(grid,pointsGrob)
@@ -144,6 +145,7 @@ importFrom(sf,st_set_crs)
 importFrom(sf,st_sf)
 importFrom(sf,st_sfc)
 importFrom(sf,st_transform)
+importFrom(sp,CRS)
 importFrom(sp,Line)
 importFrom(sp,Lines)
 importFrom(sp,Polygon)
