--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,17 +14,20 @@ export(gs_polygon)
 export(gs_random)
 export(gs_rectangle)
 export(gs_square)
+export(gs_tiles)
 export(gs_triangle)
 export(gs_voronoi)
 export(gt_edit)
 export(gt_grob)
+export(gt_group)
 export(gt_locate)
 export(gt_raster)
 export(gt_rotate)
 export(gt_scale)
 export(gt_sf)
+export(gt_skew)
 export(gt_sp)
-export(gt_vGroup)
+export(gt_stretch)
 export(makeColours)
 export(makeFormat)
 export(setCRS)
@@ -51,6 +54,7 @@ importFrom(checkmate,assertIntegerish)
 importFrom(checkmate,assertList)
 importFrom(checkmate,assertLogical)
 importFrom(checkmate,assertNames)
+importFrom(checkmate,assertNumber)
 importFrom(checkmate,assertNumeric)
 importFrom(checkmate,assertSubset)
 importFrom(checkmate,assertTRUE)
