--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(gt_sp)
 export(gt_stretch)
 export(makeColours)
 export(makeFormat)
+export(rad)
 export(setCRS)
 export(setTable)
 export(setTheme)
@@ -78,8 +79,10 @@ importFrom(deldir,tile.list)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
+importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
 importFrom(grDevices,as.raster)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.list)
@@ -170,6 +173,7 @@ importFrom(stats,kmeans)
 importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,setNames)
+importFrom(tibble,add_row)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,head)
