--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,6 +81,7 @@ importFrom(dplyr,bind_rows)
 importFrom(dplyr,everything)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(grDevices,as.raster)
