updateWindow to separate function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(setCRS)
 export(setTable)
 export(setTheme)
 export(setWindow)
+export(updateWindow)
 export(visualise)
 exportMethods(getCRS)
 exportMethods(getExtent)
