--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,11 @@ addons:
       - libgdal-dev
       - libproj-dev
 
+before_install:
+  - sudo add-apt-repository ppa:ubuntugis/ppa --yes
+  - sudo apt-get --yes --force-yes update -qq
+  - sudo apt-get install --yes libudunits2-dev libproj-dev libgeos-dev libgdal-dev
+  - Rscript -e 'install.packages("rgdal", repos="https://r-forge.r-project.org/")'
+
 after_success:
   - Rscript -e 'covr::codecov()'
