--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,9 @@
 # R for travis: see documentation at https://docs.travis-ci.com/user/languages/r
 
 language: R
-sudo: true
+sudo: required
 cache: packages
-addons:
-  apt:
-    packages:
-      - libgdal-dev
-      - libproj-dev
+dist: trusty
 
 before_install:
   - sudo add-apt-repository ppa:ubuntugis/ppa --yes
