--- a/NAMESPACE
+++ b/NAMESPACE
@@ -177,6 +177,7 @@ importFrom(sp,spTransform)
 importFrom(stats,dist)
 importFrom(stats,quantile)
 importFrom(stats,runif)
+importFrom(stats,setNames)
 importFrom(tibble,add_row)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
