further improve visualising workflow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -142,6 +142,7 @@ importFrom(raster,ratify)
 importFrom(raster,stack)
 importFrom(rgdal,project)
 importFrom(rlang,"!!")
+importFrom(rlang,enquos)
 importFrom(rlang,eval_tidy)
 importFrom(rlang,exprs)
 importFrom(sf,"st_geometry<-")
