new getter to get the type of objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(getExtent)
 export(getHistory)
 export(getSubset)
 export(getTable)
+export(getType)
 export(getVertices)
 export(getWindow)
 export(gs_hexagon)
@@ -49,6 +50,7 @@ exportMethods(getExtent)
 exportMethods(getHistory)
 exportMethods(getSubset)
 exportMethods(getTable)
+exportMethods(getType)
 exportMethods(getVertices)
 exportMethods(getWindow)
 exportMethods(makeObject)
