new function that comprises all sketching functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(gs_voronoi)
 export(gt_locate)
 export(gt_rotate)
 export(gt_scale)
+export(gt_sketch)
 export(gt_skew)
 export(gt_stretch)
 export(makeLayout)
