--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,11 @@ export(.rad)
 export(.testAnchor)
 export(.testTemplate)
 export(.testWindow)
+export(.updateVertices)
 export(.updateWindow)
 export(gc_geom)
 export(gc_grob)
+export(gc_ppp)
 export(gc_sf)
 export(gc_sp)
 export(getCRS)
@@ -44,6 +46,7 @@ export(setWindow)
 export(visualise)
 exportMethods(gc_geom)
 exportMethods(gc_grob)
+exportMethods(gc_ppp)
 exportMethods(gc_sf)
 exportMethods(gc_sp)
 exportMethods(getCRS)
@@ -90,12 +93,14 @@ importFrom(deldir,deldir)
 importFrom(deldir,tile.list)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.list)
 importFrom(grDevices,recordPlot)
