--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ importFrom(crayon,red)
 importFrom(crayon,yellow)
 importFrom(deldir,deldir)
 importFrom(deldir,tile.list)
+importFrom(dplyr,add_row)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
@@ -190,4 +191,5 @@ importFrom(tibble,add_row)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,head)
+importFrom(utils,tail)
 useDynLib(geometr)
