--- a/NAMESPACE
+++ b/NAMESPACE
@@ -183,6 +183,7 @@ importFrom(sp,SpatialPointsDataFrame)
 importFrom(sp,SpatialPolygons)
 importFrom(sp,SpatialPolygonsDataFrame)
 importFrom(sp,spTransform)
+importFrom(spatstat,owin)
 importFrom(stats,dist)
 importFrom(stats,quantile)
 importFrom(stats,runif)
