--- a/NAMESPACE
+++ b/NAMESPACE
@@ -184,6 +184,7 @@ importFrom(sp,SpatialPolygons)
 importFrom(sp,SpatialPolygonsDataFrame)
 importFrom(sp,spTransform)
 importFrom(spatstat,owin)
+importFrom(spatstat,ppp)
 importFrom(stats,dist)
 importFrom(stats,quantile)
 importFrom(stats,runif)
