--- a/NAMESPACE
+++ b/NAMESPACE
@@ -169,6 +169,7 @@ importFrom(sf,st_set_crs)
 importFrom(sf,st_sf)
 importFrom(sf,st_sfc)
 importFrom(sf,st_transform)
+importFrom(sp,"proj4string<-")
 importFrom(sp,CRS)
 importFrom(sp,Line)
 importFrom(sp,Lines)
