--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(.rad)
 export(.testAnchor)
 export(.testTemplate)
 export(.testWindow)
+export(.updateOrder)
 export(.updateVertices)
 export(.updateWindow)
 export(gc_geom)
@@ -84,7 +85,6 @@ importFrom(checkmate,testNull)
 importFrom(checkmate,testNumeric)
 importFrom(checkmate,testSubset)
 importFrom(checkmate,testTRUE)
-importFrom(cli,symbol)
 importFrom(crayon,cyan)
 importFrom(crayon,green)
 importFrom(crayon,red)
@@ -95,7 +95,6 @@ importFrom(dplyr,add_row)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
-importFrom(dplyr,everything)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
