new function to test for colours

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(.getDecimals)
 export(.makeTinyMap)
 export(.rad)
 export(.testAnchor)
+export(.testColours)
 export(.testTemplate)
 export(.testWindow)
 export(.updateOrder)
