--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
+importFrom(grDevices,col2rgb)
 importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.list)
 importFrom(grDevices,recordPlot)
