new function setHistory

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ export(gt_stretch)
 export(makeLayout)
 export(makeObject)
 export(setCRS)
+export(setHistory)
 export(setTable)
 export(setTheme)
 export(setWindow)
@@ -61,6 +62,7 @@ exportMethods(getVertices)
 exportMethods(getWindow)
 exportMethods(makeObject)
 exportMethods(setCRS)
+exportMethods(setHistory)
 exportMethods(setTable)
 exportMethods(setWindow)
 importFrom(checkmate,assert)
