new function gt_translate

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,9 +39,11 @@ export(gt_scale)
 export(gt_sketch)
 export(gt_skew)
 export(gt_stretch)
+export(gt_translate)
 export(makeLayout)
 export(makeObject)
 export(setCRS)
+export(setHistory)
 export(setTable)
 export(setTheme)
 export(setWindow)
@@ -61,6 +63,7 @@ exportMethods(getVertices)
 exportMethods(getWindow)
 exportMethods(makeObject)
 exportMethods(setCRS)
+exportMethods(setHistory)
 exportMethods(setTable)
 exportMethods(setWindow)
 importFrom(checkmate,assert)
