--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,10 +18,10 @@ export(gc_sp)
 export(getCRS)
 export(getExtent)
 export(getHistory)
+export(getPoints)
 export(getSubset)
 export(getTable)
 export(getType)
-export(getVertices)
 export(getWindow)
 export(gs_hexagon)
 export(gs_line)
@@ -57,10 +57,10 @@ exportMethods(gc_sp)
 exportMethods(getCRS)
 exportMethods(getExtent)
 exportMethods(getHistory)
+exportMethods(getPoints)
 exportMethods(getSubset)
 exportMethods(getTable)
 exportMethods(getType)
-exportMethods(getVertices)
 exportMethods(getWindow)
 exportMethods(makeObject)
 exportMethods(setCRS)
