--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: geometr
-Title: Generate interoperable geometric shapes
+Title: Generate and modify interoperable geometric shapes
 Version: 0.1.0
 Authors@R: person("Steffen", "Ehrmann", email = "steffen@funroll-loops.de",
     role = c("aut", "cre"), 
@@ -33,7 +33,8 @@ Suggests: testthat,
     rmarkdown,
     magrittr,
     covr,
-    knitr
+    knitr,
+    readr
 LinkingTo: Rcpp
 RoxygenNote: 6.1.1
 SystemRequirements: C++11
