--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,8 +8,8 @@ Description: The geometr package provides tools that generate and process
     fully accessible and tidy geometric shapes. The package improves 
     interoperability of spatial and other geometric classes by providing getters 
     and setters that produce identical output from various classes.
-URL: https://gitlab.com/EhrmannS/geometr
-BugReports: https://gitlab.com/EhrmannS/geometr/issues
+URL: https://github.com/EhrmannS/geometr
+BugReports: https://github.com/EhrmannS/geometr/issues
 Depends:
     R (>= 2.10)
 License: GPL-3
