--- a/NAMESPACE
+++ b/NAMESPACE
@@ -127,6 +127,7 @@ importFrom(grid,grid.locator)
 importFrom(grid,grid.ls)
 importFrom(grid,grid.newpage)
 importFrom(grid,grid.points)
+importFrom(grid,grid.polyline)
 importFrom(grid,grid.raster)
 importFrom(grid,grid.rect)
 importFrom(grid,grid.text)
@@ -137,6 +138,7 @@ importFrom(grid,pushViewport)
 importFrom(grid,seekViewport)
 importFrom(grid,textGrob)
 importFrom(grid,unit)
+importFrom(grid,unit.c)
 importFrom(grid,upViewport)
 importFrom(grid,viewport)
 importFrom(methods,as)
