--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,6 +12,7 @@ URL: https://github.com/EhrmannS/geometr
 BugReports: https://github.com/EhrmannS/geometr/issues
 Depends:
     R (>= 2.10)
+Language: en-gb
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
