--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,6 +106,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
 importFrom(grDevices,colorRampPalette)
+importFrom(grDevices,colors)
 importFrom(grDevices,dev.list)
 importFrom(grDevices,recordPlot)
 importFrom(grDevices,rgb)
