--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,10 @@ Version: 0.1.0
 Authors@R: person("Steffen", "Ehrmann", email = "steffen@funroll-loops.de",
     role = c("aut", "cre"), 
     comment = c(ORCID = "0000-0002-2958-0796"))
-Description: The geometr package provides tools that generate and process 
-    fully accessible and tidy geometric shapes. The package improves 
-    interoperability of spatial and other geometric classes by providing getters 
-    and setters that produce identical output from various classes.
+Description: Provides tools that generate and process fully accessible and tidy
+    geometric shapes. The package improves interoperability of spatial and 
+    other geometric classes by providing getters and setters that produce 
+    identical output from various classes.
 URL: https://github.com/EhrmannS/geometr
 BugReports: https://github.com/EhrmannS/geometr/issues
 Depends:
