update geom class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -153,6 +153,8 @@ importFrom(raster,nrow)
 importFrom(raster,projectRaster)
 importFrom(raster,ratify)
 importFrom(raster,stack)
+importFrom(raster,xres)
+importFrom(raster,yres)
 importFrom(rgdal,project)
 importFrom(rlang,"!!")
 importFrom(rlang,enquos)
