fix copyright mention

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: geometr
 Title: Generate and modify interoperable geometric shapes
 Version: 0.1.1
-Authors@R: person("Steffen", "Ehrmann", email = "steffen@funroll-loops.de",
-    role = c("aut", "cre"), 
-    comment = c(ORCID = "0000-0002-2958-0796"))
+Authors@R: c(
+    person("Steffen", "Ehrmann", role = c("aut", "cre"), email = "steffen@funroll-loops.de", comment = c(ORCID = "0000-0002-2958-0796")),
+    person("Dan", "Sunday", role = c("cph"), comment = "fast point-in-polygon algorithm.")
+    )
 Description: Provides tools that generate and process fully accessible and tidy
     geometric shapes. The package improves interoperability of spatial and 
     other geometric classes by providing getters and setters that produce 
