manage new get/setters

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,10 +16,10 @@ export(gc_sf)
 export(gc_sp)
 export(getCRS)
 export(getExtent)
+export(getFeatures)
+export(getGroups)
 export(getHistory)
 export(getPoints)
-export(getSubset)
-export(getTable)
 export(getType)
 export(getWindow)
 export(gs_hexagon)
@@ -43,8 +43,10 @@ export(gt_translate)
 export(makeLayout)
 export(makeObject)
 export(setCRS)
+export(setFeatures)
+export(setGroups)
 export(setHistory)
-export(setTable)
+export(setPoints)
 export(setTheme)
 export(setWindow)
 export(visualise)
@@ -55,16 +57,17 @@ exportMethods(gc_sf)
 exportMethods(gc_sp)
 exportMethods(getCRS)
 exportMethods(getExtent)
+exportMethods(getFeatures)
+exportMethods(getGroups)
 exportMethods(getHistory)
 exportMethods(getPoints)
-exportMethods(getSubset)
-exportMethods(getTable)
 exportMethods(getType)
 exportMethods(getWindow)
-exportMethods(makeObject)
 exportMethods(setCRS)
+exportMethods(setFeatures)
+exportMethods(setGroups)
 exportMethods(setHistory)
-exportMethods(setTable)
+exportMethods(setPoints)
 exportMethods(setWindow)
 importFrom(checkmate,assert)
 importFrom(checkmate,assertCharacter)
@@ -202,5 +205,6 @@ importFrom(tibble,add_row)
 importFrom(tibble,as_tibble)
 importFrom(tibble,tibble)
 importFrom(utils,head)
+importFrom(utils,object.size)
 importFrom(utils,tail)
 useDynLib(geometr)
