new function gc_raster

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(.updateWindow)
 export(gc_geom)
 export(gc_grob)
 export(gc_ppp)
+export(gc_raster)
 export(gc_sf)
 export(gc_sp)
 export(getCRS)
@@ -53,6 +54,7 @@ export(visualise)
 exportMethods(gc_geom)
 exportMethods(gc_grob)
 exportMethods(gc_ppp)
+exportMethods(gc_raster)
 exportMethods(gc_sf)
 exportMethods(gc_sp)
 exportMethods(getCRS)
@@ -154,7 +156,9 @@ importFrom(raster,ncol)
 importFrom(raster,nlayers)
 importFrom(raster,nrow)
 importFrom(raster,projectRaster)
+importFrom(raster,raster)
 importFrom(raster,ratify)
+importFrom(raster,res)
 importFrom(raster,stack)
 importFrom(raster,xres)
 importFrom(raster,yres)
