--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,6 +21,7 @@ export(getFeatures)
 export(getGroups)
 export(getHistory)
 export(getPoints)
+export(getRes)
 export(getType)
 export(getWindow)
 export(gs_hexagon)
@@ -63,6 +64,7 @@ exportMethods(getFeatures)
 exportMethods(getGroups)
 exportMethods(getHistory)
 exportMethods(getPoints)
+exportMethods(getRes)
 exportMethods(getType)
 exportMethods(getWindow)
 exportMethods(setCRS)
