--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -34,6 +34,7 @@ reference:
       - getGroups
       - getHistory
       - getPoints
+      - getRes
       - getType
       - getWindow
       - setCRS
