new function getLayer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(getExtent)
 export(getFeatures)
 export(getGroups)
 export(getHistory)
+export(getLayer)
 export(getPoints)
 export(getRes)
 export(getType)
@@ -63,6 +64,7 @@ exportMethods(getExtent)
 exportMethods(getFeatures)
 exportMethods(getGroups)
 exportMethods(getHistory)
+exportMethods(getLayer)
 exportMethods(getPoints)
 exportMethods(getRes)
 exportMethods(getType)
