new functions getLayer

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -33,6 +33,7 @@ reference:
       - getFeatures
       - getGroups
       - getHistory
+      - getLayer
       - getPoints
       - getRes
       - getType
