--- a/NAMESPACE
+++ b/NAMESPACE
@@ -101,6 +101,7 @@ importFrom(dplyr,distinct)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n_distinct)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
