--- a/NAMESPACE
+++ b/NAMESPACE
@@ -167,6 +167,7 @@ importFrom(sf,"st_geometry<-")
 importFrom(sf,st_bbox)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
+importFrom(sf,st_drop_geometry)
 importFrom(sf,st_geometry)
 importFrom(sf,st_geometry_type)
 importFrom(sf,st_linestring)
