enframe instead of tibble

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -203,6 +203,7 @@ importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(tibble,add_row)
 importFrom(tibble,as_tibble)
+importFrom(tibble,enframe)
 importFrom(tibble,tibble)
 importFrom(utils,head)
 importFrom(utils,object.size)
