--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(getFeatures)
 export(getGroups)
 export(getHistory)
 export(getLayer)
+export(getName)
 export(getPoints)
 export(getRes)
 export(getType)
@@ -55,6 +56,7 @@ exportMethods(getFeatures)
 exportMethods(getGroups)
 exportMethods(getHistory)
 exportMethods(getLayer)
+exportMethods(getName)
 exportMethods(getPoints)
 exportMethods(getRes)
 exportMethods(getType)
