update package namespace

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,7 +28,9 @@ export(gs_square)
 export(gs_tiles)
 export(gs_triangle)
 export(gs_voronoi)
+export(gt_filter)
 export(gt_locate)
+export(gt_pull)
 export(gt_reflect)
 export(gt_rotate)
 export(gt_scale)
@@ -42,7 +44,6 @@ export(setGroups)
 export(setHistory)
 export(setTheme)
 export(setWindow)
-export(vis_old)
 export(visualise)
 exportMethods(gc_geom)
 exportMethods(gc_ppp)
@@ -76,7 +77,6 @@ importFrom(checkmate,assertIntegerish)
 importFrom(checkmate,assertList)
 importFrom(checkmate,assertLogical)
 importFrom(checkmate,assertNames)
-importFrom(checkmate,assertNumber)
 importFrom(checkmate,assertNumeric)
 importFrom(checkmate,assertSubset)
 importFrom(checkmate,assertTRUE)
@@ -97,13 +97,16 @@ importFrom(crayon,yellow)
 importFrom(deldir,deldir)
 importFrom(deldir,tile.list)
 importFrom(dplyr,add_row)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
+importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n_distinct)
+importFrom(dplyr,pull)
 importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(dplyr,ungroup)
