--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,8 @@ export(getExtent)
 export(getFeatures)
 export(getGroups)
 export(getHistory)
-export(getLayer)
-export(getName)
+export(getLayers)
+export(getNames)
 export(getPoints)
 export(getRes)
 export(getRows)
@@ -56,8 +56,8 @@ exportMethods(getExtent)
 exportMethods(getFeatures)
 exportMethods(getGroups)
 exportMethods(getHistory)
-exportMethods(getLayer)
-exportMethods(getName)
+exportMethods(getLayers)
+exportMethods(getNames)
 exportMethods(getPoints)
 exportMethods(getRes)
 exportMethods(getRows)
