start new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,11 @@ export(gs_square)
 export(gs_tiles)
 export(gs_triangle)
 export(gs_voronoi)
+export(gt_combine)
+export(gt_dissolve)
+export(gt_enclose)
 export(gt_filter)
+export(gt_intersect)
 export(gt_locate)
 export(gt_pull)
 export(gt_reflect)
