--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,6 @@
 .Rhistory
 .RData
 .Ruserdata
-.Rbuildignore
 geometr.Rproj
 tests/testthat/Rplots.pdf
 ToDo.txt
@@ -14,3 +13,4 @@ inst/doc
 doc
 Meta
 docs
+*.html
