--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,6 +150,7 @@ importFrom(grid,viewport)
 importFrom(methods,as)
 importFrom(methods,is)
 importFrom(methods,new)
+importFrom(purrr,map)
 importFrom(raster,as.matrix)
 importFrom(raster,crs)
 importFrom(raster,extent)
